add surge deployment script

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.html",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "surge": "surge --project --domain https://dylanthorwaldson.surge.sh"
   },
   "author": "",
   "license": "ISC",
